# chatgpt_prompt_eng

./: .env  README.md  pyproject.toml
02_guidelines/: main.py
